--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "prestorybook": "rnstl",
     "storybook": "start-storybook -p 7007",
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@emotion/native": "^11.0.0",
+    "@emotion/react": "^11.9.0",
     "@react-native-community/async-storage": "^1.12.1",
+    "date-fns": "^2.28.0",
     "react": "17.0.2",
     "react-native": "0.67.3",
     "react-native-config": "^1.4.5"
@@ -39,6 +43,7 @@
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.66.2",
     "react-dom": "17.0.2",
+    "react-native-storybook-loader": "^2.0.5",
     "react-test-renderer": "17.0.2",
     "typescript": "^4.4.4"
   },
@@ -55,5 +60,14 @@
       "json",
       "node"
     ]
+  },
+  "config": {
+    "react-native-storybook-loader": {
+      "searchDir": [
+        "./components"
+      ],
+      "pattern": "**/*.stories.tsx",
+      "outputFile": "./storybook/storyLoader.js"
+    }
   }
 }
